# llama.cpp-simple-chat-interface

./: .gitignore  CMakeLists.txt  README.md
src/llm/: LLMInference.cpp  LLMInference.h  main.cpp
